--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -12,6 +12,10 @@ body {
     font-family: 'reislustnormal', cursive;
     z-index: 2;
     background-image: url("/static/Whangaehubndw.png");
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
 }
 
 nav {
@@ -22,6 +26,7 @@ nav {
 
 .navbar-dark .navbar-nav .nav-link {
     transition: 0.3s;
+    color: #f0f0f0;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
@@ -99,40 +104,80 @@ nav {
 main {
     position: relative;
     height: 100vh;
-    padding: 1em;
 }
 
-#overlay { 
-    background: rgba(0, 0, 0, 0.4);
+/* #overlay { 
+    background: rgba(0, 0, 0, 0.2);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1; 
-}
+} */
 
 h1 {
     font-weight: 700;
     color: #000;
 }
 
-#p3 {
-    font-family: 'Bad Script', cursive;
+#section-one {
+    background: rgba(0,0,0,0.9);
+    border-top: 3px solid #fff;
 }
 
-#p4 {
+#section-one #box-one {
+    /* background-color: rgba(0,0,0,0.9); */
+    margin: 1em;
+}
+
+#section-one #box-one p, #section-one #box-two p, #box-two li {
     font-family: 'Bellota Text', cursive;
+    color: #f0f0f0;
+    }
+
+#section-one p b {
+    font-weight: 800;
+    color: #7b16ffaa;
+    text-shadow: 1px 1px 1px #808080;
 }
 
-#p5 {
-    font-family: 'Jost', sans-serif;
+#section-one #box-one h1 {
+    font-family: 'Jost', cursive;
+    color: #e0e0e0;
+    text-shadow: 3px 3px 5px #7b16ffc0;
+    text-align: end;
 }
+
+#section-one #box-two h3 {
+    margin-top: 0.5em;
+    font-weight: 800;
+    font-family: 'Jost', cursive;
+    text-shadow: 3px 3px 5px #7b16ffc0;
+    color: #f0f0f0;
+    text-align: justify;
+}
+
+#section-one #box-two {
+    align-self: center;
+}
+
+#section-one #box-two ul {
+    list-style: none;
+}
+
+#section-one #box-two ul li::before {
+    content: "\f058";
+    font-size: larger;
+    color: #7b16ff;
+    text-shadow: 1px 1px 1px #404040;
+    font-family: "Font Awesome 5 Free";
+    padding: 0 10px 0 0;
+}
+
 
 @media (max-width:768px) {
     .navbar-dark .navbar-nav .nav-link:hover {
         transition: 0.3s;
-        /* font-weight: bold; */
         color: #7b16ffa0;
         background: -webkit-linear-gradient(
         -45deg,    
@@ -141,7 +186,6 @@ h1 {
         );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-}
     }
 }
 
