--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 nav {
@@ -46,9 +46,10 @@ nav {
     font-size: 3.5em;
     font-weight: 500;
     padding: 0;
+    color: #7b16ff;
     background: -webkit-linear-gradient(
     -45deg,    
-    #12dd13, 
+    #7b16ff, 
     #7b16ff 
     );
     -webkit-background-clip: text;
@@ -137,8 +138,7 @@ h1 {
 
 #section-one p b {
     font-weight: 800;
-    color: #7b16ffaa;
-    text-shadow: 1px 1px 1px #808080;
+    color: #7b16ff;
 }
 
 #section-one #box-one h1 {
