--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -9,14 +9,13 @@
 
 body {
     position: relative;
-    font-family: 'reislustnormal', cursive;
-    z-index: 2;
     background-image: url("/static/Whangaehubndw.png");
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    padding-top: 5.1em;
 }
+
 
 nav {
     background-color: rgba(0,0,0,0.9);
@@ -117,11 +116,6 @@ main {
     height: 100%;
 } */
 
-h1 {
-    font-weight: 700;
-    color: #000;
-}
-
 #section-one {
     background: rgba(0,0,0,0.9);
     border-top: 3px solid #fff;
@@ -147,6 +141,7 @@ h1 {
     color: #e0e0e0;
     text-shadow: 3px 3px 5px #7b16ffc0;
     text-align: end;
+    font-weight: 700;
 }
 
 
@@ -176,6 +171,25 @@ h1 {
     padding: 0 10px 0 0;
 }
 
+#section-two {
+    background: linear-gradient(
+    45deg,
+    rgba(0,0,0,0.9) 40vw,
+    rgba(123, 22, 255,0.7) 10vw
+    );
+    border-top: 3px solid #fff;
+}
+
+#section-two h1 {
+        font-family: 'Jost', cursive;
+        color: #202020;
+        text-shadow: 3px 3px 5px #e0e0e0;
+        text-align: end;
+        font-weight: 700;
+    }
+
+
+
 
 @media (max-width:768px) {
     .navbar-dark .navbar-nav .nav-link:hover {
@@ -197,6 +211,23 @@ h1 {
     }
     .navbar-brand span {
         font-size: 1.2em;
+    }
+    
+    body {
+        padding-top: 4.5em;
+    }
+}
+
+@media (max-width:311px) {
+    .navbar-brand {
+        font-size: 2.5em;
+    }
+    .navbar-brand span {
+        font-size: 1em;
+    }
+    
+    body {
+        padding-top: 3.9em;
     }
 }
 
