--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -168,6 +168,25 @@ main {
     padding: 0 10px 0 0;
 }
 
+#section-half-one {
+    background-color: #fffffff8;
+}
+
+#section-half-one .container {
+    /* border: 3px solid #505050; */
+    border-radius: 10px;
+    background-color: #f0f0f060;
+    box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.3);
+    transition: 0.4s;
+}
+
+#section-half-one .container:hover {
+    /* border: 2px solid #7b16ffc0; */
+    background-color: #f0f0f030;
+    box-shadow: 1px 1px 6px 1px rgba(123, 22, 255,0.6);
+    transition: 0.5s;
+}
+
 #section-two {
     background: linear-gradient(
     45deg,
