--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -104,7 +104,8 @@ a.navbar-brand:-webkit-any-link:focus, ul li a.nav-link:-webkit-any-link:focus {
 
 main {
     position: relative;
-    height: 100vh;
+    /* height: 100vh; */
+    padding-bottom: 10vh;
 }
 
 /* #overlay { 
@@ -280,6 +281,35 @@ main {
     line-height: 2em;
     }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
+    border-top: 2px solid #7b16ff;
+    position: absolute;
+    bottom: 0;
+}
+
+footer p:nth-of-type(1n) {
+    text-align:center;
+    font-size: 0.9em;
+    color: #7b16ff;
+    margin: 0;
+}
+
+footer p:nth-of-type(2n) {
+    display: none;
+}
+
+.fa-tools, .fa-hard-hat{
+    color: #7b16ff;
+    font-size: 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+}
 
 @media (max-width:768px) {
     .navbar-dark .navbar-nav .nav-link:hover {
@@ -296,6 +326,18 @@ main {
     #section-two h1 {
         color:#101010;
         text-shadow: 3px 3px 5px #ffffff;
+    }
+    footer p:nth-of-type(1n) {
+        display: none;
+    }
+
+    footer p:nth-of-type(2n) {
+        display: inline-block;
+        text-align:center;
+        font-size: 1em;
+        color: #7b16ff;
+        margin: 0;
+        line-height: 0.9em;
     }
 }
 
@@ -327,6 +369,9 @@ main {
     
     body {
         padding-top: 4.5em;
+    }
+    footer p {
+        display:none;
     }
 }
 
