--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -341,6 +341,10 @@ footer p:nth-of-type(2n) {
         margin: 0;
         line-height: 0.9em;
     }
+    i.fa-tools, i.fa-hard-hat {
+        padding-left: 0.2em;
+        padding-right: 0.2em;
+    }
 }
 
 
@@ -372,8 +376,13 @@ footer p:nth-of-type(2n) {
     body {
         padding-top: 4.5em;
     }
+    
     footer p {
         display:none;
+    }
+
+    footer {
+        font-size: small;
     }
 }
 
@@ -388,5 +397,6 @@ footer p:nth-of-type(2n) {
     body {
         padding-top: 3.9em;
     }
+
 }
 
