adding a tag to linked in reference

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -162,16 +162,6 @@ main {
     list-style: none;
 }
 
-#section-one #box-two ul li::before {
-    content: "\f058";
-    font-size: larger;
-    color: #7b16ff;
-    text-shadow: 1px 1px 1px #404040;
-    font-family: "Font Awesome 5 Free";
-    padding: 0 10px 0 0;
-}
-
-
 #section-half-one {
     background-color: #fffffff0;
 }
@@ -235,8 +225,27 @@ main {
     margin-right: 2em;
 }
 
+#section-half-one .container .hr-second {
+    background-color: #7b16ff;
+    height: 0.1em;
+    border-radius: 10%;
+    margin-left: 2em ;
+    margin-right: 2em;
+}
+
 .badge-primary {
     background-color: #7b16ffc8;
+}
+
+.fa-linkedin:before {
+    color: #7b16ff;
+    font-size: larger;
+    padding: 0 10px 0 0;
+}
+
+#section-half-one li {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
 }
 
 #section-two {
