fixed issue with nacho's photo

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -204,7 +204,7 @@ main {
 
 div figure #foto-nacho {
     height: auto;
-    width: 115px;
+    width: 18.5vh;
 }
 
 #section-half-one figure img:hover {
